--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>version 2</p>
+    <p>version 3</p>
+    <p>hellop world</p>
     <script src="script.js"></script>
 </body>
 </html>
